# Xabclib

./: .gitignore  CMakeLists.txt  Memo.md  make.all  makeclean.all  makeih.all
CMake/: XabClibConfig.cmake.in
OpenAT/: CMakeLists.txt  OpenATI_DAFGS.f90  OpenATI_DAFMC_CCS2CRS.f90  OpenATI_DAFRT.f90  OpenATI_DAFSTG.f90  OpenATI_DSRMV.f90  OpenATI_DSRMV_Setup.f90  OpenATI_DURMV.f90  OpenATI_DURMV_Setup.f90  OpenATI_EIGENSOLVE.f90  OpenATI_GET_VER.f90  OpenATI_LINEARSOLVE.f90  OpenATI_NZDIV.f90  OpenATI_QSORTI.f90  OpenATI_UTIL.f90  OpenATI_Ver.h  OpenATI_init.f90  makefile
Xabclib/: CMakeLists.txt
Xabclib/Xabclib_ARNOLDI/: BLAS_dgeev.f90  CMakeLists.txt  LAPACK_dgeev.f90  Xabclib_ARNOLDI.f90  makefile
Xabclib/Xabclib_BICGSTAB/: CMakeLists.txt  ILUT.f90  ILUTSOL.f90  Xabclib_BICGSTAB.f90  Xabclib_BICGSTABV.f90  Xabclib_BICGSTAB_PCHK.f90  Xabclib_BLAS1.f90  Xabclib_EVAL.f90  Xabclib_IDIAGPGEN.f90  Xabclib_PCGENE.f90  Xabclib_PCSLV.f90  makefile
Xabclib/Xabclib_CG/: CMakeLists.txt  Xabclib_CG.f90  Xabclib_CG_PCHK.f90  Xabclib_DSRMV_ForJacobiIter.f90  Xabclib_EVAL_SYM.f90  Xabclib_IC0D.f90  Xabclib_PCGENS.f90  Xabclib_PCSLV_SYM.f90  makefile
Xabclib/Xabclib_GMRES/: CMakeLists.txt  Xabclib_GMRES.f90  Xabclib_GMRES2.f90  Xabclib_GMRES_GS_Policy.f90  Xabclib_GMRES_INIT.f90  Xabclib_GMRES_MGS_MIN.f90  Xabclib_GMRES_MIN.f90  Xabclib_GMRES_PCHK.f90  makefile
Xabclib/Xabclib_LANCZOS/: BLAS_dstevd.f90  CMakeLists.txt  LAPACK_dstevd.f90  Xabclib_LANCZOS.f90  Xabclib_MGramSch.f90  Xabclib_QSORTD.f90  makefile
samples_c/: makecleansamplesc.all  makesamplesc.all
samples_c/BICGSTAB/: CMakeLists.txt  makefile  sampleBICGSTAB.c
samples_c/GMRES/: makefile  sampleGMRES.c  test.sh
samples_c/LINEARSOLVE/: OPENATI_POLICY_INPUT.0  makefile  sampleLINEARSOLVE.c
samples_f/: makecleansamplesf.all  makesamplesf.all
samples_f/ARNOLDI/: aload  makefile  sampleARNOLDI.f90  test.sh
samples_f/BICGSTAB/: .sampleBICGSTAB.f90.swp  makefile  sampleBICGSTAB.f90
samples_f/CCS2CRS/: Florida_RB2CRS.f90  makefile  test.sh
samples_f/CG/: makefile  sampleCG.f90
samples_f/DSRMV/: makefile  sampleDSRMV.f90
samples_f/DURMV/: makefile  sampleDURMV.f90  test.sh
samples_f/EIGENSOLVE_ARNOLDI/: OPENATI_POLICY_INPUT.0.ARNOLDI.1  OPENATI_POLICY_INPUT.0.ARNOLDI.16  OPENATI_POLICY_INPUT.0.ARNOLDI.4  OPENATI_POLICY_INPUT.0.ARNOLDI.8  makefile  sampleEIGENSOLVE.f90  testARNOLDI.sh
samples_f/EIGENSOLVE_LANCZOS/: OPENATI_POLICY_INPUT.0.LANCZOS.16  OPENATI_POLICY_INPUT.0.LANCZOS.4  OPENATI_POLICY_INPUT.0.LANCZOS.8  testLANCZOS.sh
samples_f/EIGENSOLVE_THREAD_SAFE/: OPENATI_POLICY_INPUT.0.B_LANCZOS  OPENATI_POLICY_INPUT.1.B_ARNOLDI  OPENATI_POLICY_INPUT.1.B_LANCZOS  OPENATI_POLICY_INPUT.2.B_ARNOLDI  OPENATI_POLICY_INPUT.2.B_LANCZOS  OPENATI_POLICY_INPUT.3  OPENATI_POLICY_INPUT.3.B_LANCZOS  makefile  sampleEIGENSOLVE_TS.f90  testARNOLDI_TS.sh  testLANCZOS_TS.sh
samples_f/GMRES/: makefile  sampleGMRES.f90
samples_f/LANCZOS/: makefile  sampleLANCZOS.f90  test.sh
samples_f/LINEARSOLVE/: OPENATI_POLICY_INPUT.0  OPENATI_POLICY_INPUT.0.BICGSTAB.16  OPENATI_POLICY_INPUT.0.BICGSTAB.4  OPENATI_POLICY_INPUT.0.BICGSTAB.8  OPENATI_POLICY_INPUT.0.GMRES.1  OPENATI_POLICY_INPUT.0.GMRES.4  OPENATI_POLICY_INPUT.0.GMRES.8  makefile  sampleLINEARSOLVE.f90  testBICGSTAB.sh  testGMRES.sh
samples_f/LINEARSOLVE_AUTO/: OPENATI_POLICY_INPUT.0  sampleLINEARSOLVE.f90  test.sh
samples_f/LINEARSOLVE_THREAD_SAFE/: OPENATI_POLICY_INPUT.0.BICGSTAB  OPENATI_POLICY_INPUT.1.BICGSTAB  OPENATI_POLICY_INPUT.1.GMRES  OPENATI_POLICY_INPUT.2.BICGSTAB  OPENATI_POLICY_INPUT.2.GMRES  OPENATI_POLICY_INPUT.3.BICGSTAB  OPENATI_POLICY_INPUT.3.GMRES  makefile  sampleLINEARSOLVE_TS.f90  testBICGSTAB_TS.sh  testGMRES_TS.sh
